projects/broker-enablement/k8s/service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: broker-enablement
  labels:
    app: broker-enablement
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: broker-enablement
